--- a/manufacturing-consulting.html
+++ b/manufacturing-consulting.html
@@ -73,7 +73,7 @@
                             <!-- Navbar-->
                             <div data-aos="fade-up" class="d-xl-flex align-items-center">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="" title="Turning 65">
+                                    <a class="nav-link" href="index.html" title="Turning 65">
                                         Home
                                     </a>
                                 </li>
@@ -85,7 +85,7 @@
                                     <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
                                         <li title="Manufacturing Consulting"><a class="dropdown-item"
                                                 href="manufacturing-consulting.html">Manufacturing Consulting</a></li>
-                                        <li title="Fabrication"><a class="dropdown-item" href="fabrication.html">Fabrication</a></li>
+                                       <li title="Fabrication"><a class="dropdown-item" href="fabrication.html">Fabrication</a></li>
                                         <li><a class="dropdown-item" href="#">Service 3</a></li>
                                     </ul>
                                 </li>
@@ -129,17 +129,10 @@
 
         <div class="hero" data-aos="zoom-in">
             <div class="container hero-content">
-                <h1 class="">
-                    <span class="fw-600">
-                        Product development made easy<br>
-                    </span>
-                    <span>by providing expert guidance</span>
+                <h1 class="text-center">
+                    Expert Manufacturing Consultings service
                 </h1>
-                <p class="hero-info">
-                    From sourcing parts to in-house custom fabrication, <br> AMS is your one-stop shop for all your
-                    metal fabrication needs.
-                </p>
-                <div class="d-flex mt-lg-5 mt-4 justify-content-start">
+                <div class="d-flex mt-lg-5 mt-4 justify-content-center">
                     <div class="mt-2 text-center d-flex flex-sm-row flex-column">
                         <a title="Call Now to Learn More"
                             class="btn btn-primary  rounded-1 fs-19 text-uppercase px-5 fw-600 me-sm-4 mb-sm-0 mb-4"
@@ -148,91 +141,54 @@
 
                         <a title="Get a Free Quote" class="btn btn-light rounded-1 fs-19 text-uppercase px-5 fw-600"
                             href="/contact.html">
-                            Get A Quote
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <!-- <video autoplay loop muted playsinline>
-                <source src="/videos/old-people-playing.mp4" type="video/mp4">
-            </video> -->
-            <img class="hero-img" src="/img/hero.jpg" alt="Hero background Image">
-        </div>
-    </section>
-
-    <!-- Logos Marquee -->
-    <section data-aos="fade-up" class="marquee-section mb-0">
-        <div class="marquee">
-            <div class="marquee_group">
-                <img src="/img/AMADA.png" alt="Brand">
-                <img aria-hidden="true" src="/img/FIREBALL.png" alt="brand 1">
-                <img aria-hidden="true" src="/img/LINCOLN.png" alt="brand 2">
-                <img aria-hidden="true" src="/img/PEM.png" alt="brand 3">
-                <img aria-hidden="true" src="/img/TRUMPF-1.png" alt="brand 4">
-            </div>
-
-            <div aria-hidden="true" class="marquee_group">
-                <img src="/img/AMADA.png" alt="Brand Hidden">
-                <img aria-hidden="true" src="/img/FIREBALL.png" alt="brand 1 hidden">
-                <img aria-hidden="true" src="/img/LINCOLN.png" alt="brand 2 hidden">
-                <img aria-hidden="true" src="/img/TROAX.png" alt="brand 3 hidden">
-                <img aria-hidden="true" src="/img/TRUMPF-1.png" alt="brand 4 hidden">
-            </div>
-        </div>
-    </section>
-
-    <!-- About -->
-    <section id="about" class="about-us about-us-dark mt-5">
-        <div class="container">
-            <div class="about-us-flex align-items-center">
-                <div class="info-div">
-                    <p class="sub-header text-white">About US</p>
-                    <h3 class="header">
-                        Atlantic Manufacturing Solutions (AMS)
-                    </h3>
-                    <p class="mb-4">
-                        Atlantic Manufacturing Solutions (AMS) is a South Florida-based manufacturing/engineering
-                        consulting firm specializing in the design, development, and fabrication of mechanical parts and
-                        assemblies. AMS offers turnkey services such as product development, machine design,
-                        manufacturing optimization, prototype fabrication/testing, manufacturer sourcing, and more. AMS
-                        is ready to bring your next idea to market, solve your engineering challenges, or help improve
-                        your existing products.
-                    </p>
-
-                    <ul class="mb-4">
-                        <li>
-
-                            <span>Product Development</span>
-                        </li>
-                        <li>
-
-                            <span>Machine Design</span>
-                        </li>
-                        <li>
-
-                            <span>Manufacturing Optimization</span>
-                        </li>
-
-                        <li>
-                            <span>Manufacturer Sourcing</span>
-                        </li>
-                    </ul>
-                    <div class="d-flex gap-3 flex-wrap">
-                        <a title="Call Now" class="btn btn-primary rounded-1 px-5 fs-20 fw-600"
-                            href="tel:+13057928110">Call
-                            Now</a>
-                        <a title="Get a Free Quote" class="btn btn-light border-2 rounded-1 px-5 fs-20 fw-600"
-                            href="/contact.html">
                             Get a Free Quote
                         </a>
                     </div>
                 </div>
+            </div>
+
+            <img class="hero-img" style="object-position: 30% 30%;" src="/img/prototype.jpg"
+                alt="Hero background Image">
+        </div>
+    </section>
+
+
+    <!-- About -->
+    <section id="about" class="about-us mt-5">
+        <div class="container">
+            <div class="about-us-flex">
+                <div class="info-div">
+                    <p class="sub-header">
+                        Atlantic
+                    </p>
+                    <h3 class="header">
+                        Reliable Manufacturing Consulting
+                    </h3>
+                    <p class="mb-4">
+                        Atlantic Manufacturing Solutions (AMS) provides expert manufacturing support for your product
+                        needs. Whether you're launching a new product, looking to lower manufacturing costs, or want to
+                        diversify your supply chain, AMS has the experience to help.
+                        <br><br>
+                        Our team ensures smooth production, cost savings, and reliable supply chains. Contact us today
+                        at (305) 792-8110 to learn how we can support your manufacturing goals.
+                    </p>
+                    <div class="d-flex gap-3 flex-wrap">
+                        <a title="Call Now" class="btn btn-primary rounded-1 px-5 fs-20 fw-600"
+                            href="tel:+13057928110">Call
+                            Now</a>
+                        <a title="Get a Free Quote" class="btn btn-outline-primary border-2 rounded-1 px-5 fs-20 fw-600"
+                            href="/contact.html">
+                            Get A Quote
+                        </a>
+                    </div>
+                </div>
                 <div class="img-div">
-                    <img src="/img/city.jpg" alt="Atlantic">
+                    <img src="/img/watching-tab.jpg" alt="Atlantic">
                 </div>
             </div>
         </div>
     </section>
+
 
     <section class="services">
         <div class="container">
@@ -577,6 +533,7 @@
             </div>
         </div>
     </section>
+
 
     <footer>
         <hr />
