--- a/index.html
+++ b/index.html
@@ -77,35 +77,38 @@
                                         Home
                                     </a>
                                 </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button"
-                                        data-bs-toggle="dropdown" aria-expanded="false" title="Our Services">
-                                        Our Services
-                                    </a>
-                                    <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
-                                        <li title="Manufacturing Consulting"><a class="dropdown-item"
-                                                href="manufacturing-consulting.html">Manufacturing Consulting</a></li>
-                                        <li title="Fabrication"><a class="dropdown-item" href="fabrication.html">Fabrication</a></li>
-                                        <li><a class="dropdown-item" href="#">Service 3</a></li>
-                                    </ul>
-                                </li>
 
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="" title="Solutions">
-                                        Solutions
+                                    <a class="nav-link" href="/custom-product-design.html"
+                                        title="Custom Product Design">
+                                        Custom Product Design
                                     </a>
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="" title="">
-                                        About Us
+                                    <a class="nav-link" href="/prototype-development.html"
+                                        title="Prototype Development">
+                                        Prototype Development
+                                    </a>
+                                </li>
+
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/mechanical-engineering-services.html"
+                                        title="Mechanical Engineering Services">
+                                        Mechanical Engineering Services
+                                    </a>
+                                </li>
+
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/our-clients.html" title="Our Clients">
+                                        Our Clients
                                     </a>
                                 </li>
 
                                 <div class="nav-cta-div d-xl-none d-inline mt-3">
                                     <a title="Call Now" class="nav-cta fs-17 text-uppercase" href="/contact.html">
-                                        Contact Us
+                                        Free Consultation
                                     </a>
 
                                     <a title="Call Now" class="nav-cta fs-17 text-uppercase mt-4"
@@ -119,7 +122,7 @@
                 </div>
                 <div class="nav-cta-div d-xl-inline d-none">
                     <a title="Call Now" class="nav-cta fs-17 text-uppercase" href="/contact.html">
-                        Contact Us
+                        Free Consultation
                     </a>
                 </div>
             </div>
@@ -130,33 +133,30 @@
         <div class="hero" data-aos="zoom-in">
             <div class="container hero-content">
                 <h1 class="">
-                    <span class="fw-600">
-                        Product development made easy<br>
-                    </span>
-                    <span>by providing expert guidance</span>
+                    We Give Your Ideas Life with
+                    <br>
+                    Custom Prototype Design <br> and Fabrication
                 </h1>
                 <p class="hero-info">
-                    From sourcing parts to in-house custom fabrication, <br> AMS is your one-stop shop for all your
-                    metal fabrication needs.
+                    Mechanical Engineering Services for Custom Product Design and Development.
                 </p>
                 <div class="d-flex mt-lg-5 mt-4 justify-content-start">
                     <div class="mt-2 text-center d-flex flex-sm-row flex-column">
                         <a title="Call Now to Learn More"
                             class="btn btn-primary  rounded-1 fs-19 text-uppercase px-5 fw-600 me-sm-4 mb-sm-0 mb-4"
-                            href="tel:+13057928110">Call
-                            Now</a>
+                            href="/custom-product-design.html"> Custom Product Development</a>
 
                         <a title="Get a Free Quote" class="btn btn-light rounded-1 fs-19 text-uppercase px-5 fw-600"
                             href="/contact.html">
-                            Get A Quote
+                            Free Consultation
                         </a>
                     </div>
                 </div>
             </div>
-            <!-- <video autoplay loop muted playsinline>
-                <source src="/videos/old-people-playing.mp4" type="video/mp4">
-            </video> -->
-            <img class="hero-img" src="/img/hero.jpg" alt="Hero background Image">
+            <video autoplay loop muted playsinline>
+                <source src="/videos/hero.mp4" type="video/mp4">
+            </video>
+            <!-- <img class="hero-img" src="/img/hero.jpg" alt="Hero background Image"> -->
         </div>
     </section>
 
@@ -240,7 +240,7 @@
                 Our Services
             </h2>
             <div class="flex">
-                <div class="column">
+                <a href="/mechanical-engineering-services.html" class="column">
                     <div class="img-div">
                         <img src="/img/product-design.jpg" alt="Product design">
                         <div class="icon-div">
@@ -253,12 +253,12 @@
                     <p>
                         Our team of engineers and designers will work with you to bring your product to life.
                     </p>
-                    <a href="">
+                    <p class="read-more">
                         Read More
-                    </a>
-                </div>
+                    </p>
+                </a>
 
-                <div class="column">
+                <a href="/prototype-development.html" class="column">
                     <div class="img-div">
                         <img src="/img/prototype.jpg" alt="Prototype">
                         <div class="icon-div">
@@ -271,12 +271,12 @@
                     <p>
                         We can help you bring your idea to life with our in-house custom fabrication services.
                     </p>
-                    <a href="">
+                    <p class="read-more">
                         Read More
-                    </a>
-                </div>
+                    </p>
+                </a>
 
-                <div class="column">
+                <a href="manufacturing-consulting.html" class="column">
                     <div class="img-div">
                         <img src="/img/manufacturing-consulting.jpg" alt="Manufacturing Consulting">
                         <div class="icon-div">
@@ -289,12 +289,201 @@
                     <p>
                         Our team of experts can help you optimize your manufacturing process.
                     </p>
-                    <a href="">
+                    <p class="read-more">
                         Read More
-                    </a>
-                </div>
+                    </p>
+                </a>
             </div>
         </div>
+    </section>
+
+    <!-- Development Process -->
+    <section class="development-process">
+        <div class="container">
+            <h3 class="header text-center">
+                Our Development Process
+            </h3>
+            <div class="main-layout">
+                <div class="circle" data-phase="Phase 1: UNDERSTAND">
+                    <i class="fa-solid fa-chalkboard-user"></i>
+                </div>
+
+                <div class="circle" data-phase="Phase 2: CONCEPULATION">
+                    <i class="fa-solid fa-bullseye"></i>
+                </div>
+
+                <div class="circle" data-phase="Phase 3: DOWN SELECT">
+                    <i class="fa-solid fa-object-ungroup"></i>
+                </div>
+
+                <div class="circle" data-phase="Phase 4: PROTOTYPE">
+                    <i class="fa-solid fa-gears"></i>
+                </div>
+
+                <div class="circle" data-phase="Phase 5: REFINE">
+                    <i class="fa-solid fa-check-double"></i>
+                </div>
+
+                <div class="circle" data-phase="Phase 6: MANUFATURE">
+                    <i class="fa-solid fa-hammer"></i>
+                </div>
+
+                <div class="description" id="phase-description"></div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Roadmap -->
+    <section class="roadmap">
+        <div class="container">
+            <h3 class="header text-center">
+                Our Roadmap
+            </h3>
+            <div class="flex">
+                <div class="item">
+                    <div class="img-div">
+                        <img src="/img/phase-1.png" alt="Roadmap 1">
+                    </div>
+                    <div class="info-div">
+                        <h4>
+                            Phase 1: UNDERSTAND
+                        </h4>
+                        <p>
+                            The first and foundational step in our process involves a deep dive into understanding the
+                            specific needs and requirements of our clients. This stage is critical for establishing a
+                            clear,
+                            comprehensive brief that outlines the project's objectives, constraints, and criteria for
+                            success. Our team at AMS collaborates closely with clients to gather all necessary
+                            information,
+                            ensuring that every aspect of the project is meticulously defined. This thorough
+                            understanding
+                            serves as the bedrock upon which all subsequent design and engineering decisions are made,
+                            guaranteeing solutions that are not only innovative but also perfectly aligned with our
+                            clients'
+                            goals.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="img-div">
+                        <img src="/img/phase-2.jpg" alt="Roadmap 2">
+                    </div>
+                    <div class="info-div">
+                        <h4>
+                            Phase 2: CONCEPULATION
+                        </h4>
+                        <p>
+                            Following the clear definition of requirements, our team transitions into the concept
+                            generation
+                            phase. Here, creativity meets engineering prowess as we brainstorm a wide range of
+                            solutions.
+                            Leveraging our expertise in various engineering disciplines, we explore multiple ideas,
+                            considering different approaches and technologies that could be used to meet the project's
+                            objectives. This stage is characterized by open-mindedness and innovation, with the aim of
+                            producing a diverse set of concepts that can be evaluated for feasibility, performance, and
+                            impact. It's a collaborative and dynamic process that taps into the collective knowledge and
+                            creativity of our team to pave the way for groundbreaking solutions.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="img-div">
+                        <img src="/img/phase-3.jpg" alt="Roadmap 3">
+                    </div>
+                    <div class="info-div">
+                        <h4>
+                            Phase 3: DOWN SELECT
+                        </h4>
+                        <p>
+                            Once a broad spectrum of concepts has been developed, the down select phase focuses on
+                            evaluating these ideas against the project's defined requirements and constraints. This
+                            critical
+                            analysis involves rigorous assessment criteria, including technical feasibility,
+                            cost-effectiveness, scalability, and sustainability, among others. The goal is to narrow
+                            down
+                            the options to the most promising concepts that offer the best balance of innovation,
+                            practicality, and potential for success. This stage ensures that resources are concentrated
+                            on
+                            developing solutions with the highest likelihood of meeting and exceeding our clients'
+                            expectations.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="img-div">
+                        <img src="/img/phase-4.jpg" alt="Roadmap 4">
+                    </div>
+                    <div class="info-div">
+                        <h4>
+                            Phase 4: PROTOTYPE
+                        </h4>
+                        <p>
+                            With the most viable concepts selected, the next step is to bring these ideas to life
+                            through
+                            prototyping. This phase is all about translating theoretical designs into tangible models
+                            that
+                            can be tested and evaluated. Prototyping is crucial for identifying any design flaws,
+                            assessing
+                            the functionality of the product, and gathering feedback for further refinement. It allows
+                            for a
+                            hands-on approach to problem-solving and innovation, enabling our team at AMS to iterate
+                            quickly
+                            and efficiently. By the end of this stage, we have a working prototype that demonstrates the
+                            feasibility and potential of the proposed solution.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="img-div">
+                        <img src="/img/phase-5.jpg" alt="Roadmap 5">
+                    </div>
+                    <div class="info-div">
+                        <h4>
+                            Phase 5: REFINE
+                        </h4>
+                        <p>
+                            Following prototyping, the refinement phase focuses on optimizing the design based on
+                            feedback
+                            and test results. This stage involves making adjustments to improve performance, enhance
+                            user
+                            experience, reduce costs, or address any other identified issues. Our team works
+                            meticulously to
+                            fine-tune every aspect of the product, ensuring that it not only meets but surpasses the
+                            initial
+                            requirements. This process of continuous improvement is guided by a commitment to excellence
+                            and
+                            a deep understanding of engineering principles, ensuring that the final design is robust,
+                            efficient, and ready for manufacturing.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="img-div">
+                        <img src="/img/phase-6.jpg" alt="Roadmap 6">
+                    </div>
+                    <div class="info-div">
+                        <h4>
+                            Phase 6: MANUFACTURE
+                        </h4>
+                        <p>
+                            The final step in our process is the transition from refined prototypes to full-scale
+                            production. This phase is where our engineering solutions are realized as tangible products,
+                            ready for the market. Our manufacturing process is characterized by a strict adherence to
+                            quality standards, efficiency, and scalability. We work closely with trusted manufacturing
+                            partners to ensure that each product is produced to our exact specifications, using the most
+                            suitable materials and technologies. Throughout this stage, we maintain a focus on
+                            sustainability and cost-effectiveness, ensuring that our solutions are not only innovative
+                            but
+                            also accessible and responsible.
+                        </p>
+                    </div>
+                </div>
     </section>
 
     <!-- Our Expertise -->
