--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
     <section class="nav-hero position-relative mb-0" style="overflow: hidden;">
         <div class="first-nav py-2">
             <div class="container py-1">
-                <div class="d-flex justify-content-end gap-5">
-                    <a title="phone number" href="tel:+13057928110">
+                <div class="d-flex justify-content-sm-end justify-content-center gap-sm-5 gap-3 flex-wrap">
+                    <a title="phone number" href="tel:+13057928110" class="d-flex align-items-center">
                         <i class="text-success fa-solid fa-phone"></i>
                         <span class="d-sm-inline d-block text-center fs-16">
                             +1 (305) 792-8110
                         </span>
                     </a>
-                    <a title="phone number" href="mailto:contact@atlanticmfgs.com">
+                    <a title="phone number" href="mailto:contact@atlanticmfgs.com" class="d-flex align-items-center">
                         <i class="text-success fs-18 fa-solid fa-envelope"></i>
                         <span class="d-sm-inline d-block text-center fs-16">
                             contact@atlanticmfgs.com
@@ -72,11 +72,11 @@
                         <ul class="navbar-nav w-100 mb-2 mb-lg-0">
                             <!-- Navbar-->
                             <div data-aos="fade-up" class="d-xl-flex align-items-center">
-                                <li class="nav-item">
+                                <!-- <li class="nav-item">
                                     <a class="nav-link" href="" title="Turning 65">
                                         Home
                                     </a>
-                                </li>
+                                </li> -->
 
 
                                 <li class="nav-item">
@@ -100,11 +100,11 @@
                                     </a>
                                 </li>
 
-                                <li class="nav-item">
+                                <!-- <li class="nav-item">
                                     <a class="nav-link" href="/our-clients.html" title="Our Clients">
                                         Our Clients
                                     </a>
-                                </li>
+                                </li> -->
 
                                 <div class="nav-cta-div d-xl-none d-inline mt-3">
                                     <a title="Call Now" class="nav-cta fs-17 text-uppercase" href="/contact.html">
@@ -140,8 +140,8 @@
                 <p class="hero-info">
                     Mechanical Engineering Services for Custom Product Design and Development.
                 </p>
-                <div class="d-flex mt-lg-5 mt-4 justify-content-start">
-                    <div class="mt-2 text-center d-flex flex-sm-row flex-column">
+                <div class="d-flex  mt-lg-5 mt-4 justify-content-start">
+                    <div class="mt-2 text-center d-flex flex-md-row flex-column gap-3">
                         <a title="Call Now to Learn More"
                             class="btn btn-primary  rounded-1 fs-19 text-uppercase px-5 fw-600 me-sm-4 mb-sm-0 mb-4"
                             href="/custom-product-design.html"> Custom Product Development</a>
@@ -342,6 +342,9 @@
             </h3>
             <div class="flex">
                 <div class="item">
+                    <div class="circle">
+                        <i class="fa-solid fa-chalkboard-user"></i>
+                    </div>
                     <div class="img-div">
                         <img src="/img/phase-1.png" alt="Roadmap 1">
                     </div>
@@ -367,6 +370,9 @@
                 </div>
 
                 <div class="item">
+                    <div class="circle">
+                        <i class="fa-solid fa-bullseye"></i>
+                    </div>
                     <div class="img-div">
                         <img src="/img/phase-2.jpg" alt="Roadmap 2">
                     </div>
@@ -390,6 +396,9 @@
                 </div>
 
                 <div class="item">
+                    <div class="circle">
+                        <i class="fa-solid fa-object-ungroup"></i>
+                    </div>
                     <div class="img-div">
                         <img src="/img/phase-3.jpg" alt="Roadmap 3">
                     </div>
@@ -414,6 +423,9 @@
                 </div>
 
                 <div class="item">
+                    <div class="circle">
+                        <i class="fa-solid fa-gears"></i>
+                    </div>
                     <div class="img-div">
                         <img src="/img/phase-4.jpg" alt="Roadmap 4">
                     </div>
@@ -439,6 +451,9 @@
                 </div>
 
                 <div class="item">
+                    <div class="circle" data-phase="Phase 5: REFINE">
+                        <i class="fa-solid fa-check-double"></i>
+                    </div>
                     <div class="img-div">
                         <img src="/img/phase-5.jpg" alt="Roadmap 5">
                     </div>
@@ -464,6 +479,9 @@
                 </div>
 
                 <div class="item">
+                    <div class="circle" data-phase="Phase 6: MANUFATURE">
+                        <i class="fa-solid fa-hammer"></i>
+                    </div>
                     <div class="img-div">
                         <img src="/img/phase-6.jpg" alt="Roadmap 6">
                     </div>
