feat: inner pages

--- a/custom-fabrication.html
+++ b/custom-fabrication.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=no">
-    <title>Prototype Development – Atlantic Manufacturing Solutions</title>
+    <title>Atlantic Manufacturing Solutions – Atlantic Manufacturing Solutions</title>
 
 
     <meta name="description" content="">
@@ -133,10 +133,10 @@
         <div class="hero" data-aos="zoom-in">
             <div class="container hero-content">
                 <h1 class="text-center">
-                Manufacturing Consulting Services
+                    Custom Product Design
                 </h1>
             </div>
-            <img class="hero-img" src="/img/planning.jpg" alt="Hero background Image">
+            <img class="hero-img" src="/img/phase-4.jpg" alt="Hero background Image">
         </div>
     </section>
     <!-- About -->
@@ -146,22 +146,28 @@
                 <div class="info-div">
                     <p class="sub-header text-white">About US</p>
                     <h3 class="header">
-                       Manufacturing Consulting Services that Drive Success
+                        Custom Product Design Services that Meet Your Needs
                     </h3>
                     <p class="mb-4">
-                        At Atlantic Manufacturing Solutions, we offer a comprehensive range of manufacturing consulting
-                        services to help businesses optimize their operations, improve efficiency, and drive growth. Our
-                        team of experienced engineers and consultants works closely with clients to identify challenges,
-                        develop innovative solutions, and implement strategies that deliver tangible results. Whether
-                        you're looking to streamline your production processes, enhance product quality, or expand your
-                        manufacturing capabilities, we have the expertise and resources to help you achieve your goals.
+                        We provide custom product design services to help you bring your ideas to life. Our team of
+                        experts will work with you to create a product that meets your needs and exceeds your
+                        expectations. Whether you need help with product development, machine design, or manufacturing
+                        optimization, we have the skills and experience to help you succeed.
                     </p>
 
                     <ul class="mb-4">
-                        <li>Product Development</li>
-                        <li>Machine Design</li>
-                        <li>Manufacturing Optimization</li>
-                        <li>Manufacturer Sourcing</li>
+                        <li>
+
+                            <span>Product Development</span>
+                        </li>
+                        <li>
+
+                            <span>Machine Design</span>
+                        </li>
+                        <li>
+
+                            <span>Manufacturing Optimization</span>
+                        </li>
                     </ul>
                     <div class="d-flex gap-3 flex-wrap">
                         <a title="Call Now" class="btn btn-primary rounded-1 px-5 fs-20 fw-600"
@@ -174,7 +180,7 @@
                     </div>
                 </div>
                 <div class="img-div">
-                    <img src="/img/manufacturing-consulting.jpg" alt="Atlantic">
+                    <img style="" src="/img/indusrtial-engineer.jpg" alt="Atlantic">
                 </div>
             </div>
         </div>
