--- a/index.html
+++ b/index.html
@@ -129,16 +129,50 @@
 
             </div>
         </nav>
+        <div class="stacked-nav">
+            <div class="container">
+                <ul class="navbar-nav d-flex flex-row justify-content-center align-items-center flex-wrap">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/custom-product-design.html" title="Custom Product Design">
+                            Custom Product Design
+                        </a>
+                    </li>
+
+                    <li>
+                        <a class="nav-link" href="/custom-fabrication.html" title="Custom Fabrication">
+                            Custom Fabrication
+                        </a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="/prototype-development.html" title="Prototype Development">
+                            Prototype Development
+                        </a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="/manufacturing-consulting.html"
+                            title="Mechanical Engineering Services">
+                            Manufacturing Consulting
+                        </a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="/our-portfolio.html" title="Our Portfolio">
+                            Our Portfolio
+                        </a>
+                    </li>
+            </div>
+        </div>
 
         <div class="hero" data-aos="zoom-in">
             <div class="container hero-content">
                 <h1 class="">
-                    We Give Your Ideas Life with
-                    <br>
-                    Custom Prototype Design <br> and Fabrication
+                    We bring inventions to life with <br>
+                    custom prototype design & Fabrication
                 </h1>
                 <p class="hero-info">
-                    Mechanical Engineering Services for Custom Product Design and Development.
+                    Mechanical Engineering Services // Custom Product Design and Development.
                 </p>
                 <div class="d-flex  mt-lg-5 mt-4 justify-content-start">
                     <div class="mt-2 text-center d-flex flex-md-row flex-column gap-3">
@@ -798,7 +832,21 @@
                     <div class="text-info">
 
                         <p>
-                            <a href="">Link 1</a>
+                            <a title="Home" href="/index.html">
+                                Home
+                            </a>
+                        </p>
+
+                        <p>
+                            <a title="Contact Us" href="/contact.html">
+                                Contact Us
+                            </a>
+                        </p>
+
+                        <p>
+                            <a title="Our Clients" href="/our-clients.html">
+                                Our Clients
+                            </a>
                         </p>
 
                     </div>
@@ -808,7 +856,26 @@
                     <p class="mb-3"><strong class="text-primary h5 fw-600 fs-16">Services</strong></p>
                     <div class="text-info">
                         <p>
-                            <a href="">Link 1</a>
+                            <a title="Custom product design" href="/custom-product-design.html">Custom product
+                                design</a>
+                        </p>
+                        <p>
+                            <a title="Custom product design" href="/custom-fabrication.html">Custom Fabrication</a>
+                        </p>
+                        <p>
+                            <a title="Manufacturing Consulting" href="/manufacturing-consulting.html">Manufacturing
+                                Consulting</a>
+                        </p>
+
+                        <p>
+                            <a title="Prototype" href="/prototype-development.html">Prototype
+                                Development</a>
+                        </p>
+
+                        <p>
+                            <a title="Mechanical Engineering Services" href="/mechanical-engineering-services.html">
+                                Mechanical Engineering Services
+                            </a>
                         </p>
                     </div>
                 </div>
