--- a/contact.html
+++ b/contact.html
@@ -5,14 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=no">
-    <title>Contact Us - Atlantic Inc.</title>
-
-    <meta name="description"
-        content="Contact Atlantic Inc. for trusted Medicare services in Illinois, Texas, and Wisconsin. Our expert advisors provide clear guidance and support tailored to your needs.">
-    <meta name="keywords"
-        content="medicare services, medicare services in Illinois, medicare services in texas, medicare services in wisconsin, medicare part d, medicare supplement, medicare advisors">
+    <title>Atlantic Manufacturing Solutions – Atlantic Manufacturing Solutions</title>
 
 
+    <meta name="description" content="">
+    <meta name="keywords" content="">
 
     <!-- CSS -->
     <link rel="stylesheet" href="/css/index.css">
@@ -30,13 +27,19 @@
 <body>
     <!-- Top of the navbar -->
     <section class="nav-hero inner-page position-relative" style="overflow: hidden;">
-        <div class="first-nav">
-            <div class="container">
-                <div class="d-flex justify-content-center">
-                               <a title="phone number" href="tel:+13057928110">
-                        Call or Text for Medicare Help 
-                        <span class="text-decoration-underline d-sm-inline d-block text-center">
+        <div class="first-nav py-2">
+            <div class="container py-1">
+                <div class="d-flex justify-content-sm-end justify-content-center gap-sm-5 gap-3 flex-wrap">
+                    <a title="phone number" href="tel:+13057928110" class="d-flex align-items-center">
+                        <i class="text-success fa-solid fa-phone"></i>
+                        <span class="d-sm-inline d-block text-center fs-16">
                             +1 (305) 792-8110
+                        </span>
+                    </a>
+                    <a title="phone number" href="mailto:contact@atlanticmfgs.com" class="d-flex align-items-center">
+                        <i class="text-success fs-18 fa-solid fa-envelope"></i>
+                        <span class="d-sm-inline d-block text-center fs-16">
+                            contact@atlanticmfgs.com
                         </span>
                     </a>
                 </div>
@@ -69,34 +72,47 @@
                         <ul class="navbar-nav w-100 mb-2 mb-lg-0">
                             <!-- Navbar-->
                             <div data-aos="fade-up" class="d-xl-flex align-items-center">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="/turning-65-enrollment.html" title="Turning 65">
-                                        Turning 65 ?
+                                <!-- <li class="nav-item">
+                                    <a class="nav-link" href="" title="Turning 65">
+                                        Home
                                     </a>
-                                </li>
+                                </li> -->
+
+
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/medicare-services.html" title="Medicare Services">
-                                        Medicare Services
+                                    <a class="nav-link" href="/custom-product-design.html"
+                                        title="Custom Product Design">
+                                        Custom Product Design
                                     </a>
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/resources.html" title="Resources">
-                                        Resources
+                                    <a class="nav-link" href="/prototype-development.html"
+                                        title="Prototype Development">
+                                        Prototype Development
                                     </a>
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/es/contacto.html" title="Spanish Homepage">
-                                        Español
+                                    <a class="nav-link" href="/mechanical-engineering-services.html"
+                                        title="Mechanical Engineering Services">
+                                        Mechanical Engineering Services
                                     </a>
                                 </li>
+
+                                <!-- <li class="nav-item">
+                                    <a class="nav-link" href="/our-clients.html" title="Our Clients">
+                                        Our Clients
+                                    </a>
+                                </li> -->
+
                                 <div class="nav-cta-div d-xl-none d-inline mt-3">
                                     <a title="Call Now" class="nav-cta fs-17 text-uppercase" href="/contact.html">
-                                        Get Medicare Quote
+                                        Free Consultation
                                     </a>
 
-                                    <a title="Call Now" class="nav-cta fs-17 text-uppercase mt-4" href="tel:+13057928110">
+                                    <a title="Call Now" class="nav-cta fs-17 text-uppercase mt-4"
+                                        href="tel:+13057928110">
                                         Call Now
                                     </a>
                                 </div>
@@ -106,7 +122,7 @@
                 </div>
                 <div class="nav-cta-div d-xl-inline d-none">
                     <a title="Call Now" class="nav-cta fs-17 text-uppercase" href="/contact.html">
-                        Get Medicare Quote
+                        Free Consultation
                     </a>
                 </div>
             </div>
@@ -119,25 +135,8 @@
                 <h1 class="text-center">
                     Contact Us
                 </h1>
-                <div class="d-flex mt-lg-5 mt-4 justify-content-center">
-                    <div class="mt-2 text-center d-flex flex-sm-row flex-column">
-                        <a title="Call Now to Learn More"
-                            class="btn btn-primary  rounded-1 fs-19 text-uppercase px-5 fw-600 me-sm-4 mb-sm-0 mb-4"
-                            href="tel:+13057928110">Call
-                            Now</a>
-
-                        <a title="Get a Free Quote"
-                            class="btn btn-light rounded-1 fs-19 text-uppercase px-5 fw-600" href="/contact.html">
-                            Get a Free Quote
-                        </a>
-                    </div>
-                </div>
             </div>
-            <!-- <video autoplay loop muted playsinline>
-                <source src="/videos/old-people-playing.mp4" type="video/mp4">
-            </video> -->
-            <img class="hero-img" style="object-position:70% 70%;" src="/img/seniors-watching-ground.jpg"
-                alt="Hero background Image">
+            <img class="hero-img" src="/img/hero.jpg" alt="Hero background Image">
         </div>
     </section>
 
@@ -153,16 +152,7 @@
                         Service Areas
                     </p>
                     <p class="text">
-                        <a href="/illinois-medicare-services.html" title="Illinois medicare services" class="me-2">
-                            <i class="fa-solid fa-location-dot"></i> Illinois
-                        </a>
-                        <a href="/wisconsin-medicare-services.html" title="Wisconsin medicare services">
-                            <i class="fa-solid fa-location-dot"></i> Wisconsin
-                        </a>
-                        <br>
-                        <a href="/texas-medicare-services.html" title="Texas medicare services">
-                            <i class="fa-solid fa-location-dot"></i> Texas
-                        </a>
+                        12253 SW 129th Ct, <br> Miami, FL 33186
                     </p>
                 </div>
 
@@ -175,7 +165,7 @@
                         Email Address
                     </p>
                     <a href="mailto: gloriaagency1@gmail.com">
-                        gloriaagency1@gmail.com
+                        contact@atlanticmfgs.com
                     </a>
                 </div>
 
@@ -187,9 +177,6 @@
                     <p class="title">
                         Phone number
                     </p>
-                    <a title="Phone Number" href="tel:+18159868975">
-                        +1 (815) 986-8975
-                    </a>
 
                     <a title="Secondary Phone Number" href="tel:+13057928110">
                         +1 (305) 792-8110
@@ -197,7 +184,7 @@
                 </div>
 
                 <!-- Service Hours -->
-                <div class="column">
+                <!-- <div class="column">
                     <div class="icon-div">
                         <i class="fa-regular fa-clock"></i>
                     </div>
@@ -210,7 +197,7 @@
                     <p>
                         Saturday and Sundays: By Appointment
                     </p>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
@@ -228,7 +215,7 @@
                             <div class="col-12">
                                 <div class="contact-section__form">
                                     <h5 class="header">
-                                        Request a Get a Free Quote
+                                        Contact Us
                                     </h5>
                                     <form action="#" class="form-group">
                                         <!-- Lead add 1st row  -->
@@ -317,10 +304,24 @@
                 <div class="col-lg col-md-4 col-12 mb-lg-0 mb-4 footer-col text-left">
                     <p class="mb-3"><strong class="text-primary h5 fw-600 fs-16"> Quick Links</strong></p>
                     <div class="text-info">
-                        <p><a title="Turning 65" href="/turning-65-enrollment.html">Turning 65 ?</a></p>
-                        <p><a title="Medicare Services" href="/medicare-services.html">Medicare Services</a></p>
-                        <p><a title="Resources" href="/resources.html">Resources</a></p>
-                        <p><a title="Contact" href="/contact.html">Contact Us</a></p>
+
+                        <p>
+                            <a title="Home" href="/index.html">
+                                Home
+                            </a>
+                        </p>
+
+                        <p>
+                            <a title="Contact Us" href="/contact.html">
+                                Contact Us
+                            </a>
+                        </p>
+
+                        <p>
+                            <a title="Our Clients" href="/our-clients.html">
+                                Our Clients
+                            </a>
+                        </p>
 
                     </div>
                 </div>
@@ -328,15 +329,28 @@
                 <div class="col-lg col-md-4 col-12 mb-lg-0 mb-4 footer-col text-left">
                     <p class="mb-3"><strong class="text-primary h5 fw-600 fs-16">Services</strong></p>
                     <div class="text-info">
-                        <p><a title="Hospital Insurance" href="/medicare-part-a-hospital-insurance.html">Hospital
-                                Insurance (A)</a></p>
-                        <p><a title="Medicare Insurance" href="/medicare-part-b-medicare-insurance.html">Medicare
-                                Insurance (B)</a></p>
-                        <p><a title="Medicare Advantage" href="/medicare-part-c-medicare-advantage.html">Medicare
-                                Advantage (C)</a></p>
-                        <p><a title="Prescription Drug Coverage"
-                                href="/medicare-part-d-prescription-drug-coverage.html">Prescription
-                                Drug Coverage (D)</a></p>
+                        <p>
+                            <a title="Custom product design" href="/custom-product-design.html">Custom product
+                                design</a>
+                        </p>
+                        <p>
+                            <a title="Custom product design" href="/custom-fabrication.html">Custom Fabrication</a>
+                        </p>
+                        <p>
+                            <a title="Manufacturing Consulting" href="/manufacturing-consulting.html">Manufacturing
+                                Consulting</a>
+                        </p>
+
+                        <p>
+                            <a title="Prototype" href="/prototype-development.html">Prototype
+                                Development</a>
+                        </p>
+
+                        <p>
+                            <a title="Mechanical Engineering Services" href="/mechanical-engineering-services.html">
+                                Mechanical Engineering Services
+                            </a>
+                        </p>
                     </div>
                 </div>
 
@@ -346,30 +360,9 @@
                         <p class="d-flex align-items-center mb-3">
                             <a href="tel:+13057928110"><i class="fa-solid fa-phone me-2"></i> +1 (305) 792-8110</a>
                         </p>
-                        <p>
-                            <a title="Illinois medicare services" href="/illinois-medicare-services.html"
-                                class="d-flex">
-                                <span><i class="fa-solid fa-location-dot me-2"></i>
-                                    Illinois
-                                </span>
-                            </a>
-                        </p>
-
-                        <p>
-                            <a title="Wisconsin medicare services" href="wisconsin-medicare-services.html"
-                                class="d-flex">
-                                <span><i class="fa-solid fa-location-dot me-2"></i>
-                                    Wisconsin
-                                </span>
-                            </a>
-                        </p>
-
-                        <p>
-                            <a title="Texas medicare services" href="texas-medicare-services.html" class="d-flex">
-                                <span><i class="fa-solid fa-location-dot me-2"></i>
-                                    Texas
-                                </span>
-                            </a>
+                        <p class="d-flex align-items-center mb-3">
+                            <a href="mailto:contact@atlanticmfgs.com"><i class="fa-solid fa-envelope me-2"></i>
+                                contact@atlanticmfgs.com</a>
                         </p>
                     </div>
                 </div>
@@ -377,7 +370,7 @@
             <hr class="mt-4" />
 
 
-            <p class="pt-2 pb-3 fw-500 text-info text-center">&copy Atlantic 2024. All rights
+            <p class="pt-2 pb-3 fw-500 text-info text-center">&copy AMS Solutions 2024. All rights
                 reserved.</p>
             <p class="pt-2 pb-3 fw-500 text-info text-center">The content available on this website is owned by us and
                 our licensors. Copying any content, including images, without our consent is prohibited.</p>
