feat: jer changes

--- a/contact.html
+++ b/contact.html
@@ -5,12 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=no">
-    <title>Atlantic Manufacturing Solutions – Atlantic Manufacturing Solutions</title>
+    <title>Contact Us – Atlantic Manufacturing Solutions</title>
 
-
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-
+    <meta name="description"
+        content="Get in touch with AMS for custom manufacturing, engineering services, and free consultations. Call us at +1 (305) 792-8110.">
+    <meta name="keywords" content="contact, engineering services, free consultation, South Florida, AMS">
     <!-- CSS -->
     <link rel="stylesheet" href="/css/index.css">
 
@@ -25,6 +24,14 @@
 </head>
 
 <body>
+    <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/embed/v2.js"></script>
+    <script>
+        hbspt.forms.create({
+            region: "na1",
+            portalId: "45079038",
+            formId: "6aeb28af-d5c1-46ce-a0a4-d284b0c483ec"
+        });
+    </script>
     <!-- Top of the navbar -->
     <section class="nav-hero inner-page position-relative" style="overflow: hidden;">
         <div class="first-nav py-2">
@@ -80,9 +87,8 @@
 
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/custom-product-design.html"
-                                        title="Custom Product Design">
-                                        Custom Product Design
+                                    <a class="nav-link" href="/product-development.html" title="Product development">
+                                        Product development
                                     </a>
                                 </li>
 
@@ -330,7 +336,7 @@
                     <p class="mb-3"><strong class="text-primary h5 fw-600 fs-16">Services</strong></p>
                     <div class="text-info">
                         <p>
-                            <a title="Custom product design" href="/custom-product-design.html">Custom product
+                            <a title="Custom product design" href="/product-development.html">Custom product
                                 design</a>
                         </p>
                         <p>
