--- a/mechanical-engineering-services.html
+++ b/mechanical-engineering-services.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=no">
-    <title>Mechanical Engineering Services – Atlantic Manufacturing Solutions</title>
+    <title>Mechanical Engineering Services - Atlantic Manufacturing Solutions</title>
 
-
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="Expert mechanical engineering services for product development, machine design, and optimization. Bringing your ideas to market with AMS.">
+    <meta name="keywords" content="mechanical engineering, product development, AMS, machine design, engineering services">
+    
 
     <!-- CSS -->
     <link rel="stylesheet" href="/css/index.css">
@@ -80,9 +80,9 @@
 
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/custom-product-design.html"
-                                        title="Custom Product Design">
-                                        Custom Product Design
+                                                                       <a class="nav-link" href="/product-development.html"
+                                        title="Product development">
+                                        Product development
                                     </a>
                                 </li>
 
@@ -159,10 +159,13 @@
                     </p>
 
                     <ul class="mb-4">
-                        <li>Product Development</li>
-                        <li>Machine Design</li>
-                        <li>Manufacturing Optimization</li>
-                        <li>Manufacturer Sourcing</li>
+                        <li>3D Molding (CAD) Design
+                        </li>
+                        <li>Manufacturing Drawings
+                        </li>
+                        <li>Structural Analysis (FEA)
+                        </li>
+                        <li>Reverse Engineering</li>
                     </ul>
                     <div class="d-flex gap-3 flex-wrap">
                         <a title="Call Now" class="btn btn-primary rounded-1 px-5 fs-20 fw-600"
@@ -640,7 +643,7 @@
                     <p class="mb-3"><strong class="text-primary h5 fw-600 fs-16">Services</strong></p>
                     <div class="text-info">
                         <p>
-                            <a title="Custom product design" href="/custom-product-design.html">Custom product
+                            <a title="Custom product design" href="/product-development.html">Custom product
                                 design</a>
                         </p>
                         <p>
