--- a/product-development.html
+++ b/product-development.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=no">
-    <title>Custom Product Design – Atlantic Manufacturing Solutions</title>
+    <title>Product Development Services - Atlantic Manufacturing Solutions</title>
 
-
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="Comprehensive product development services at AMS. From design to prototype, we help bring your ideas to life.">
+    <meta name="keywords" content="product development, design, AMS, custom fabrication, engineering services">
+    
 
     <!-- CSS -->
     <link rel="stylesheet" href="/css/index.css">
@@ -133,7 +133,7 @@
         <div class="hero" data-aos="zoom-in">
             <div class="container hero-content">
                 <h1 class="text-center">
-                    Custom Product Design
+                    Product Development
                 </h1>
             </div>
             <img class="hero-img" src="/img/phase-4.jpg" alt="Hero background Image">
@@ -146,7 +146,7 @@
                 <div class="info-div">
                     <p class="sub-header text-white">About US</p>
                     <h3 class="header">
-                        Custom Product Design Services that Meet Your Needs
+                        Custom Product Development Services that Meet Your Needs
                     </h3>
                     <p class="mb-4">
                         We provide custom product design services to help you bring your ideas to life. Our team of
@@ -158,15 +158,20 @@
                     <ul class="mb-4">
                         <li>
 
-                            <span>Product Development</span>
+                            <span>
+                                Turnkey Product Development
+                            </span>
                         </li>
                         <li>
-
-                            <span>Machine Design</span>
+                            <span>
+                                Concept Generation
+                            </span>
                         </li>
                         <li>
-
                             <span>Manufacturing Optimization</span>
+                        </li>
+                        <li>
+                            <span>Industrial Design</span>
                         </li>
                     </ul>
                     <div class="d-flex gap-3 flex-wrap">
@@ -180,7 +185,7 @@
                     </div>
                 </div>
                 <div class="img-div">
-                    <img style="transform: scaleX(-1);" src="/img/prototype.jpg" alt="Atlantic">
+                    <img src="/img/product-development.jpg" alt="Atlantic">
                 </div>
             </div>
         </div>
