--- a/prototype-development.html
+++ b/prototype-development.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=no">
-    <title>Prototype Development – Atlantic Manufacturing Solutions</title>
+    <title>Prototype Development - Bring Your Ideas to Life with AMS</title>
 
+    <meta name="description"
+        content="Expert prototype development services at AMS. From concept to fabrication, we help turn your ideas into reality.">
+    <meta name="keywords" content="prototype development, AMS, custom fabrication, design, engineering">
 
-    <meta name="description" content="">
-    <meta name="keywords" content="">
 
     <!-- CSS -->
     <link rel="stylesheet" href="/css/index.css">
@@ -80,9 +81,8 @@
 
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/custom-product-design.html"
-                                        title="Custom Product Design">
-                                        Custom Product Design
+                                    <a class="nav-link" href="/product-development.html" title="Product development">
+                                        Product development
                                     </a>
                                 </li>
 
@@ -162,10 +162,18 @@
                     </p>
 
                     <ul class="mb-4">
-                        <li>Product Development</li>
-                        <li>Machine Design</li>
-                        <li>Manufacturing Optimization</li>
-                        <li>Manufacturer Sourcing</li>
+                        <li>
+                            Prototype Design & Dabrication
+                        </li>
+                        <li>
+                            In-house Assembly & Testing
+                        </li>
+                        <li>
+                            Rapid Prototyping
+                        </li>
+                        <li>
+                            Manufacturing Sourcing
+                        </li>
                     </ul>
                     <div class="d-flex gap-3 flex-wrap">
                         <a title="Call Now" class="btn btn-primary rounded-1 px-5 fs-20 fw-600"
@@ -627,7 +635,7 @@
                     <p class="mb-3"><strong class="text-primary h5 fw-600 fs-16">Services</strong></p>
                     <div class="text-info">
                         <p>
-                            <a title="Custom product design" href="/custom-product-design.html">Custom product
+                            <a title="Custom product design" href="/product-development.html">Custom product
                                 design</a>
                         </p>
                         <p>
