--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=no">
-    <title>Atlantic Manufacturing Solutions – Atlantic Manufacturing Solutions</title>
+    <title>Product Development & Engineering – Atlantic Manufacturing Solutions</title>
 
 
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+        <meta name="description" content="South Florida's experts in product design, mechanical engineering, and prototype development. Bringing your ideas to life with custom fabrication solutions.">
+        <meta name="keywords" content="product development, prototype design, custom fabrication, engineering, manufacturing solutions">
 
     <!-- CSS -->
     <link rel="stylesheet" href="/css/index.css">
@@ -80,9 +80,9 @@
 
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/custom-product-design.html"
-                                        title="Custom Product Design">
-                                        Custom Product Design
+                                    <a class="nav-link" href="/product-development.html"
+                                        title="Product development">
+                                        Product development
                                     </a>
                                 </li>
 
@@ -133,7 +133,7 @@
             <div class="container">
                 <ul class="navbar-nav d-flex flex-row justify-content-center align-items-center flex-wrap">
                     <!-- <li class="nav-item">
-                        <a class="nav-link" href="/custom-product-design.html" title="Custom Product Design">
+                        <a class="nav-link" href="/product-development.html" title="Custom Product Design">
                             Custom Product Design
                         </a>
                     </li> -->
@@ -176,9 +176,11 @@
                 </p>
                 <div class="d-flex  mt-lg-5 mt-4 justify-content-start">
                     <div class="mt-2 text-center d-flex flex-md-row flex-column gap-3">
-                        <a title="Call Now to Learn More"
+                        <a title="Request a Quote"
                             class="btn btn-primary  rounded-1 fs-19 text-uppercase px-5 fw-600 me-sm-4 mb-sm-0 mb-4"
-                            href="/custom-product-design.html"> Custom Product Development</a>
+                            href="/contact.html"> 
+                            Request a Quote
+                        </a>
 
                         <a title="Get a Free Quote" class="btn btn-light rounded-1 fs-19 text-uppercase px-5 fw-600"
                             href="/contact.html">
@@ -198,19 +200,19 @@
     <section data-aos="fade-up" class="marquee-section mb-0">
         <div class="marquee">
             <div class="marquee_group">
-                <img src="/img/AMADA.png" alt="Brand">
-                <img aria-hidden="true" src="/img/FIREBALL.png" alt="brand 1">
-                <img aria-hidden="true" src="/img/LINCOLN.png" alt="brand 2">
-                <img aria-hidden="true" src="/img/PEM.png" alt="brand 3">
-                <img aria-hidden="true" src="/img/TRUMPF-1.png" alt="brand 4">
+                <img src="/img/lg-1.svg" alt="Brand">
+                <img aria-hidden="true" src="/img/lg-2.png" alt="brand 1">
+                <img aria-hidden="true" src="/img/lg-3.png" alt="brand 2">
+                <img aria-hidden="true" src="/img/lg-4.png" alt="brand 3">
+                <img aria-hidden="true" src="/img/lg-5.svg" alt="brand 4">
             </div>
 
             <div aria-hidden="true" class="marquee_group">
-                <img src="/img/AMADA.png" alt="Brand Hidden">
-                <img aria-hidden="true" src="/img/FIREBALL.png" alt="brand 1 hidden">
-                <img aria-hidden="true" src="/img/LINCOLN.png" alt="brand 2 hidden">
-                <img aria-hidden="true" src="/img/TROAX.png" alt="brand 3 hidden">
-                <img aria-hidden="true" src="/img/TRUMPF-1.png" alt="brand 4 hidden">
+                <img src="/img/lg-1.svg" alt="Brand Hidden">
+                <img aria-hidden="true" src="/img/lg-2.png" alt="brand 1 hidden">
+                <img aria-hidden="true" src="/img/lg-3.png" alt="brand 2 hidden">
+                <img aria-hidden="true" src="/img/lg-4.png" alt="brand 3 hidden">
+                <img aria-hidden="true" src="/img/lg-5.svg" alt="brand 4 hidden">
             </div>
         </div>
     </section>
@@ -924,7 +926,7 @@
                     <p class="mb-3"><strong class="text-primary h5 fw-600 fs-16">Services</strong></p>
                     <div class="text-info">
                         <p>
-                            <a title="Custom product design" href="/custom-product-design.html">Custom product
+                            <a title="Custom product design" href="/product-development.html">Custom product
                                 design</a>
                         </p>
                         <p>
