--- a/manufacturing-consulting.html
+++ b/manufacturing-consulting.html
@@ -5,13 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=no">
-    <title>
-        Manufacturing Consulting Services – Atlantic Manufacturing Solutions
-    </title>
+    <title>Manufacturing Consulting - Optimize Your Process with AMS</title>
 
-
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="Optimize your manufacturing process with AMS. Our expert consulting services improve efficiency and scalability.">
+    <meta name="keywords" content="manufacturing consulting, process optimization, AMS, efficiency, scalability">
+    
 
     <!-- CSS -->
     <link rel="stylesheet" href="/css/index.css">
@@ -82,9 +80,9 @@
 
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/custom-product-design.html"
-                                        title="Custom Product Design">
-                                        Custom Product Design
+                                                                       <a class="nav-link" href="/product-development.html"
+                                        title="Product development">
+                                        Product development
                                     </a>
                                 </li>
 
@@ -160,9 +158,9 @@
                     </p>
 
                     <ul class="mb-4">
-                        <li>Product Development</li>
-                        <li>Machine Design</li>
-                        <li>Manufacturing Optimization</li>
+                        <li>Cost & Lead Time Reduction</li>
+                        <li>Supply Chain Divarication</li>
+                        <li>Manufacturing Optimization (DFM)</li>
                         <li>Manufacturer Sourcing</li>
                     </ul>
                     <div class="d-flex gap-3 flex-wrap">
@@ -662,7 +660,7 @@
                     <p class="mb-3"><strong class="text-primary h5 fw-600 fs-16">Services</strong></p>
                     <div class="text-info">
                         <p>
-                            <a title="Custom product design" href="/custom-product-design.html">Custom product
+                            <a title="Custom product design" href="/product-development.html">Custom product
                                 design</a>
                         </p>
                         <p>
