--- a/our-portfolio.html
+++ b/our-portfolio.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=no">
-    <title>Atlantic Manufacturing Solutions – Atlantic Manufacturing Solutions</title>
+    <title>Our Portfolio - Atlantic Manufacturing Solutions</title>
 
-
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="Explore our portfolio showcasing custom product design, prototype development, and manufacturing solutions. Innovative engineering at AMS.">
+    <meta name="keywords" content="portfolio, custom design, engineering, AMS, manufacturing solutions, prototype">
+    
 
     <!-- CSS -->
     <link rel="stylesheet" href="/css/index.css">
@@ -80,9 +80,9 @@
 
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/custom-product-design.html"
-                                        title="Custom Product Design">
-                                        Custom Product Design
+                                                                       <a class="nav-link" href="/product-development.html"
+                                        title="Product development">
+                                        Product development
                                     </a>
                                 </li>
 
@@ -178,7 +178,7 @@
                     <p class="mb-3"><strong class="text-primary h5 fw-600 fs-16">Services</strong></p>
                     <div class="text-info">
                         <p>
-                            <a title="Custom product design" href="/custom-product-design.html">Custom product
+                            <a title="Custom product design" href="/product-development.html">Custom product
                                 design</a>
                         </p>
                         <p>
